@@ -18,6 +18,7 @@ import edu.wpi.first.math.geometry.Translation2d;
 import java.io.IOException;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.util.Map;
 import java.util.concurrent.CompletableFuture;
@@ -914,7 +915,7 @@ public class LimelightHelpers {
         String urlString = "http://" + sanitizeName(tableName) + ".local:5807/" + request;
         URL url;
         try {
-            url = new URL(urlString);
+            url = URI.create(urlString).toURL();
             return url;
         } catch (MalformedURLException e) {
             System.err.println("bad LL URL");
